# Expression-Tree-Calculator

./: CMakeLists.txt  README.md
Calculator/: CMakeLists.txt  main.cpp
Calculator/include/: Calculator.h  ExpressionParser.h  Node.h  NumberNode.h  Token.h  Tokenizer.h  Types.h
Calculator/src/: Calculator.cpp  ExpressionParser.cpp  NumberNode.cpp  OperatorNode.cpp  Token.cpp  Tokenizer.cpp  main.cpp
CalculatorCore/: CMakeLists.txt
CalculatorCore/include/: Calculator.h  CalculatorCoreAPI.h  ExpressionParser.h  Node.h  NumberNode.h  OperatorNode.h  Token.h  Tokenizer.h  Types.h
CalculatorCore/src/: Calculator.cpp  ExpressionParser.cpp  NumberNode.cpp  OperatorNode.cpp  Token.cpp  Tokenizer.cpp
CalculatorTests/: CMakeLists.txt
CalculatorTests/Tests/: BasicOperationsTest.cpp  CalculatorTestFixture.h  ComplexExpressionsTest.cpp  InvalidExpressionsTest.cpp  UnaryOperationsTest.cpp  VariableSubstitutionTest.cpp
